banner section find offer btn width alignment fix

--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ footer {
         font-size: 15px;
       }
       & input[type="submit"] {
-        width: 100%;
+        width: 200px;
         height: 50px;
         padding: 12px 18px;
         margin: 8px 0;
